use ParameterMetaData for datatype discovery